- Minimum java version is now 21! - When opening file a new search tab is no longer opened (configurable)